Fixed bug which displaced footer while overlay was visible

--- a/html/css/kylebatson.css
+++ b/html/css/kylebatson.css
@@ -23,7 +23,6 @@ body {
 
 body.hasOverlay {
 	overflow: hidden;
-	height: 100vh;
 }
 
 body.baseline {
